K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr-demo
  namespace: workshop
  annotations:
  # Load Balancer Name
  alb.ingress.kubernetes.io/load-balancer-name: cpr-ingress
  # Ingress Core Settings
  # kubernetes.io//ingress.class: "alb"
  alb.ingress.kubernetes.io/scheme: internet-facing
  # Health Check Settings
  alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
  alb.ingress.kubernetes.io/healthcheck-port: traffic-port
  # mportant Note: Need to add health  check annotations in service level if we are planning to multiple targets in a load-balancer
  alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
  alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
  alb.ingress.kubernetes.io/success-codes: '200'
  alb.ingress.kubernetes.io/healthy-threshold-count: '2'  
  alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  ingressClassName: my-aws-ingress-class
  rules:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:   
                  number: 80
